// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeSuccessScreen should render minutes as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeSuccessScreen
    onPressCta={[MockFunction]}
    rating={2}
    reward={2}
    score={360}
    unit="minutes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Stars
          isLeftHighlighted={true}
          isMidHighlighted={true}
          isRightHighlighted={false}
        />,
        <Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginBottom": -16,
              }
            }
          >
            <PlusPoints
              coins={2}
            />
          </Component>
          <Image
            source={
              Object {
                "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
              }
            }
          />
          <YuText
            bold={true}
            style={
              Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              }
            }
          >
            6 minutes
          </YuText>
        </Component>,
        <Component
          style={
            Object {
              "marginTop": 20,
              "width": 280,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 30,
                "textAlign": "center",
              }
            }
          >
            You can take a challenge again tomorrow.
          </YuText>
        </Component>,
        <Button
          label="collect"
          onPress={[MockFunction]}
          type="PrimarySmall"
          wrapperStyle={
            Object {
              "marginTop": 100,
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isLeftHighlighted": true,
          "isMidHighlighted": true,
          "isRightHighlighted": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <PlusPoints
                coins={2}
              />
            </Component>,
            <Image
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                }
              }
            />,
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              6 minutes
            </YuText>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <PlusPoints
                coins={2}
              />,
              "style": Object {
                "alignItems": "center",
                "marginBottom": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "coins": 2,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "6 minutes",
              "style": Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "6 minutes",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 30,
                "textAlign": "center",
              }
            }
          >
            You can take a challenge again tomorrow.
          </YuText>,
          "style": Object {
            "marginTop": 20,
            "width": 280,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "You can take a challenge again tomorrow.",
            "style": Object {
              "color": "rgb(170,170,170)",
              "fontSize": 30,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "You can take a challenge again tomorrow.",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "collect",
          "onPress": [MockFunction],
          "type": "PrimarySmall",
          "wrapperStyle": Object {
            "marginTop": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Stars
            isLeftHighlighted={true}
            isMidHighlighted={true}
            isRightHighlighted={false}
          />,
          <Component>
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <PlusPoints
                coins={2}
              />
            </Component>
            <Image
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                }
              }
            />
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              6 minutes
            </YuText>
          </Component>,
          <Component
            style={
              Object {
                "marginTop": 20,
                "width": 280,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(170,170,170)",
                  "fontSize": 30,
                  "textAlign": "center",
                }
              }
            >
              You can take a challenge again tomorrow.
            </YuText>
          </Component>,
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
            wrapperStyle={
              Object {
                "marginTop": 100,
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLeftHighlighted": true,
            "isMidHighlighted": true,
            "isRightHighlighted": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "marginBottom": -16,
                  }
                }
              >
                <PlusPoints
                  coins={2}
                />
              </Component>,
              <Image
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                  }
                }
              />,
              <YuText
                bold={true}
                style={
                  Object {
                    "bottom": 40,
                    "color": "rgb(168, 105, 22)",
                    "fontSize": 50,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "textAlign": "center",
                  }
                }
              >
                6 minutes
              </YuText>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <PlusPoints
                  coins={2}
                />,
                "style": Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "coins": 2,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "6 minutes",
                "style": Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "6 minutes",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(170,170,170)",
                  "fontSize": 30,
                  "textAlign": "center",
                }
              }
            >
              You can take a challenge again tomorrow.
            </YuText>,
            "style": Object {
              "marginTop": 20,
              "width": 280,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "You can take a challenge again tomorrow.",
              "style": Object {
                "color": "rgb(170,170,170)",
                "fontSize": 30,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "You can take a challenge again tomorrow.",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "collect",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
            "wrapperStyle": Object {
              "marginTop": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeSuccessScreen should render steps as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeSuccessScreen
    onPressCta={[MockFunction]}
    rating={2}
    reward={2}
    score={1180}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Stars
          isLeftHighlighted={true}
          isMidHighlighted={true}
          isRightHighlighted={false}
        />,
        <Component>
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginBottom": -16,
              }
            }
          >
            <PlusPoints
              coins={2}
            />
          </Component>
          <Image
            source={
              Object {
                "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
              }
            }
          />
          <YuText
            bold={true}
            style={
              Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              }
            }
          >
            1180 steps
          </YuText>
        </Component>,
        <Component
          style={
            Object {
              "marginTop": 20,
              "width": 280,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 30,
                "textAlign": "center",
              }
            }
          >
            You can take a challenge again tomorrow.
          </YuText>
        </Component>,
        <Button
          label="collect"
          onPress={[MockFunction]}
          type="PrimarySmall"
          wrapperStyle={
            Object {
              "marginTop": 100,
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isLeftHighlighted": true,
          "isMidHighlighted": true,
          "isRightHighlighted": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <PlusPoints
                coins={2}
              />
            </Component>,
            <Image
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                }
              }
            />,
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              1180 steps
            </YuText>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <PlusPoints
                coins={2}
              />,
              "style": Object {
                "alignItems": "center",
                "marginBottom": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "coins": 2,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "1180 steps",
              "style": Object {
                "bottom": 40,
                "color": "rgb(168, 105, 22)",
                "fontSize": 50,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "1180 steps",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 30,
                "textAlign": "center",
              }
            }
          >
            You can take a challenge again tomorrow.
          </YuText>,
          "style": Object {
            "marginTop": 20,
            "width": 280,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "You can take a challenge again tomorrow.",
            "style": Object {
              "color": "rgb(170,170,170)",
              "fontSize": 30,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "You can take a challenge again tomorrow.",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "collect",
          "onPress": [MockFunction],
          "type": "PrimarySmall",
          "wrapperStyle": Object {
            "marginTop": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Stars
            isLeftHighlighted={true}
            isMidHighlighted={true}
            isRightHighlighted={false}
          />,
          <Component>
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                }
              }
            >
              <PlusPoints
                coins={2}
              />
            </Component>
            <Image
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                }
              }
            />
            <YuText
              bold={true}
              style={
                Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                }
              }
            >
              1180 steps
            </YuText>
          </Component>,
          <Component
            style={
              Object {
                "marginTop": 20,
                "width": 280,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(170,170,170)",
                  "fontSize": 30,
                  "textAlign": "center",
                }
              }
            >
              You can take a challenge again tomorrow.
            </YuText>
          </Component>,
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
            wrapperStyle={
              Object {
                "marginTop": 100,
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLeftHighlighted": true,
            "isMidHighlighted": true,
            "isRightHighlighted": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "marginBottom": -16,
                  }
                }
              >
                <PlusPoints
                  coins={2}
                />
              </Component>,
              <Image
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                  }
                }
              />,
              <YuText
                bold={true}
                style={
                  Object {
                    "bottom": 40,
                    "color": "rgb(168, 105, 22)",
                    "fontSize": 50,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "textAlign": "center",
                  }
                }
              >
                1180 steps
              </YuText>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <PlusPoints
                  coins={2}
                />,
                "style": Object {
                  "alignItems": "center",
                  "marginBottom": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "coins": 2,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "source": Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenge-success/assets/challenge-success.png",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "1180 steps",
                "style": Object {
                  "bottom": 40,
                  "color": "rgb(168, 105, 22)",
                  "fontSize": 50,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "1180 steps",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(170,170,170)",
                  "fontSize": 30,
                  "textAlign": "center",
                }
              }
            >
              You can take a challenge again tomorrow.
            </YuText>,
            "style": Object {
              "marginTop": 20,
              "width": 280,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "You can take a challenge again tomorrow.",
              "style": Object {
                "color": "rgb(170,170,170)",
                "fontSize": 30,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "You can take a challenge again tomorrow.",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "collect",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
            "wrapperStyle": Object {
              "marginTop": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
